Add manifest, ServiceWorker, and Sign in completed.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Pladowns",
-  "name": "Pladowns App Test",
+  "short_name": "Mini Happy",
+  "name": "Mini Happy Application",
   "icons": [
     {
       "src": "assets/launcher/96.png",
