--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "name": "fcm-notifications-functions",
+  "version": "1.0.0",
+  "description": "\"FCM notifications Firebase Functions\"",
+  "main": "index.js",
   "dependencies": {
-    "firebase-admin": "~4.2.1",
+    "firebase-admin": "^5.0.0",
     "firebase-functions": "^0.5.7"
-  },
-  "private": true
+  }
 }
